# pylib

./: .gitmodules  CMakeLists.txt  compressed_index_buffer.cpp  compressed_vertex_buffer.cpp  compressed_vertex_buffer.h  main.c  main.cpp  readme.md  utils.hpp
cmake_files/lzham_comp/: CMakeLists.txt
cmake_files/lzham_decomp/: CMakeLists.txt
include/: common.h  compressed_index_buffer.h  compressed_vertex_buffer.h  lz4_module.h  py_helpers.h  texture_compression.h  texture_decompression.h  texture_module.h  utils.hpp  vtflib_module.h
include/vtflib/: vtflib.h
src/: common.cpp  lz4_module.cpp  main.cpp  texture_decompression.cpp  vtflib_module.cpp  vtflib_tester.cpp  zstd_module.cpp
src/compressed_mesh_module/: compressed_index_buffer.cpp  compressed_vertex_buffer.cpp
src/lz4_module/: lz4_decoder.cpp
src/texture_module/: bc1.cpp  bc1.h  bc2.cpp  bc2.h  bc3.cpp  bc3.h  bc4.cpp  bc4.h  bc5.cpp  bc5.h  shared.h  texture_decompression.cpp
src/vtflib/: vtflib.cpp
